--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 # Ignorar todo el contenido de las carpetas
-train/*
-valid/*
-test/*
-
+poker/train/*
+poker/valid/*
+poker/test/*
+poker/*
 # Pero permitir mantener la carpeta con un marcador vacío
-!train/.gitkeep
-!valid/.gitkeep
-!test/.gitkeep
+!poker/train/.gitkeep
+!poker/valid/.gitkeep
+!poker/test/.gitkeep
 
 # Los .h5
 *.h5
